# Sigma

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  test.sc.complex  test.sc.lighting
include/: AABBTree.h  AlignedVectorAllocator.hpp  BitArray.hpp  GLTransform.h  IBulletShape.h  IComponent.h  IECSComponent.h  IECSComponentData.h  IECSFactory.h  IEntity.h  IFactory.h  IGLComponent.h  IMoverComponent.h  IOpSys.h  ISound.h  ISystem.h  Log.h  OS.h  Property.h  SCParser.h  SIMD.hpp  SharedPointerMap.hpp  Sigma.h  VectorMap.hpp  WeakPtrWrapper.hpp  strutils.h
include/components/: ALSound.h  ArrayPool.hpp  BitArray.h  Body.h  BulletMover.h  BulletShapeCapsule.h  BulletShapeMesh.h  BulletShapeSphere.h  CameraMover.h  CanMove.h  ControllableMove.h  GLCubeSphere.h  GLIcoSphere.h  GLMesh.h  GLScreenQuad.h  GLSprite.h  InterpolatedMovement.h  Orientation.h  PhysicalWorldComponent.h  PhysicalWorldLocation.h  PhysicsController.h  PhysicsMover.h  PointLight.h  Renderable.h  RigidBody.h  SigmaMotionState.h  SpatialComponent.h  SpotLight.h  ViewMover.h  WebGUIComponent.h  WorldOrientation.h  WorldPosition.h  WorldPosition_SIMD.hpp  WorldPosition_SIMD_gcc.hpp
include/composites/: ControllableMove.h  InterpolatedMovement.h  PhysicalWorldLocation.h  RigidBody.h
include/controllers/: FPSCamera.h  GLFPSController.h  GLFPSViewController.h  GLSixDOFViewController.h  GUIController.h  PhysicalWorldController.h
include/entities/: BulletMover.h
include/os/sdl/: SDLSys.h
include/os/win32/: win32.h
include/resources/: ALBuffer.h  GLCubeSphere.h  GLIcoSphere.h  GLScreenQuad.h  GLSprite.h  GLTexture.h  Mesh.h  Shader.h  SoundFile.h  Texture.h
include/systems/: BulletPhysics.h  EntitySystem.h  FactorySystem.h  GLFPSView.h  GLSLShader.h  GLSixDOFView.h  IGLView.h  KeyboardInputSystem.h  MouseInputSystem.h  OpenALSystem.h  OpenGLSystem.h  ResourceSsytem.h  ResourceSystem.h  SimplePhysics.h  WebGUISystem.h  WorldObjectsSystem.h
modules/: FindAwesomium.cmake  FindBullet.cmake  FindCEF.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindOggVorbis.cmake  FindOpenAL.cmake  FindSDL2_image.cmake  FindSOIL.cmake
shaders/: ambient.frag  ambient.vert  basic.frag  basic.vert  cubesphere.frag  cubesphere.vert  frag.shade  icosphere.frag  icosphere.vert  mesh.frag  mesh_deferred.frag  mesh_deferred.vert  mesh_pointlight.frag  mesh_pointlight.vert  pointlight.frag  pointlight.vert  quad.frag  quad.vert  skybox.frag  skybox.vert  spotlight.frag  sprite.frag  sprite.vert  vert.shade
src/: AABBTree.cpp  AABBTree.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  GLTransform.cpp  GLTransform.h  IBulletShape.cpp  IBulletShape.h  IComponent.h  IEntity.cpp  IFactory.h  IGLComponent.cpp  IGLComponent.h  IMoverComponent.cpp  IMoverComponent.h  IOpSys.h  ISystem.h  Log.cpp  OS.cpp  Property.h  SCParser.cpp  SCParser.h  SDLSys.cpp  SDLSys.h  SceneManager.cpp  SceneManager.h  SoundFile.cpp  main.cpp  strutils.h  tribox.h  win32.cpp  win32.h
src/Components/: GLCubeSphere.cpp  GLCubeSphere.h  GLIcoSphere.cpp  GLIcoSphere.h  GLMesh.cpp  GLMesh.h  GLSprite.cpp  GLSprite.h  LogQueue.cpp  LogQueue.h  ViewMover.cpp  ViewMover.h
src/Controllers/: GLSixDOFViewController.h
src/OS/: CMakeLists.txt
src/OS/sdl/: SDLSys.cpp  SDLSys.h
src/OS/win32/: win32.cpp  win32.h
src/Systems/: GLSLShader.cpp  GLSLShader.h  GLSixDOFView.cpp  KeyboardInputSystem.h  LogSystem.cpp  LogSystem.h  OpenGLSystem.cpp  OpenGLSystem.h  SImplePhysics.cpp
src/components/: AABBCollider.cpp  AABBCollider.h  ALSound.cpp  BitArray.cpp  BulletMover.cpp  BulletMover.h  BulletShapeCapsule.cpp  BulletShapeMesh.cpp  BulletShapeSphere.cpp  BulletShapeSphere.h  CameraMover.cpp  CanMove.cpp  ControllableMove.cpp  GLCubeSphere.cpp  GLCubeSphere.h  GLIcoSphere.cpp  GLIcoSphere.h  GLMesh.cpp  GLMesh.h  GLScreenQuad.cpp  GLSprite.cpp  GLSprite.h  InterpolatedMovement.cpp  PhysicalWorldComponent.cpp  PhysicalWorldLocation.cpp  PhysicsController.cpp  PhysicsMover.cpp  PhysicsMover.h  PointLight.cpp  Renderable.cpp  RigidBody.cpp  SigmaMotionState.cpp  SpotLight.cpp  ViewMover.cpp  ViewMover.h  WebGUIComponent.cpp  WorldOrientation.cpp  WorldPosition.cpp
src/composites/: ControllableMove.cpp  InterpolatedMovement.cpp  PhysicalWorldLocation.cpp  RigidBody.cpp
src/controllers/: FPSCamera.cpp  GLFPSController.cpp  GLFPSController.h  GLFPSViewController.cpp  GLSixDOFViewController.cpp  GLSixDOFViewController.h  GUIController.cpp  PhysicalWorldController.cpp
src/entities/: BulletMover.cpp
src/os/: CMakeLists.txt
src/os/sdl/: SDLSys.cpp  SDLSys.h
src/os/win32/: win32.cpp  win32.h
src/resources/: GLCubeSphere.cpp  GLIcoSphere.cpp  GLScreenQuad.cpp  GLSprite.cpp  Mesh.cpp  Shader.cpp
src/systems/: BulletPhysics.cpp  BulletPhysics.h  EntitySystem.cpp  FactorySystem.cpp  FactorySystem.h  GLFPSView.cpp  GLFPSView.h  GLSLShader.cpp  GLSixDOFView.cpp  GLSixDOFView.h  IGLView.h  KeyboardInputSystem.h  MouseInputSystem.cpp  MouseInputSystem.h  OpenALSystem.cpp  OpenGLSystem.cpp  OpenGLSystem.h  ResourceSystem.cpp  SImplePhysics.cpp  SimplePhysics.cpp  SimplePhysics.h  WebGUISystem.cpp
src/tests/: Log.cpp  main.cpp
tests/: CMakeLists.txt  main.cpp
tests/tests/: BitArrayTest.h  EntityManagerTest.h  PropertyTest.h  VectorMapTest.h  WorldOrientationTest.h  WorldPositionTest.h
